# -

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  apps\miniapp\app\globals.css  apps\miniapp\app\page.tsx  apps\miniapp\package.json  apps\miniapp\src\api.ts  docker-compose.yml  docs\SECURITY.md  infra\compose\dev.yml  infra\compose\prod.yml  infra\docker\Dockerfile.api  infra\docker\Dockerfile.llm  operator_day\__init__.py  operator_day\api\schemas.py  operator_day\bot\render.py  operator_day\brain\orchestrator.py  operator_day\brain\review_writer.py  operator_day\connectors\replay.py  operator_day\db.py  operator_day\embeddings.py  operator_day\main.py  operator_day\models.py  operator_day\pvz\shifts.py  operator_day\selfupdate\__init__.py  operator_day\skills_catalog.py  pyproject.toml  tests\conftest.py  tests\test_api.py  tests\test_api_auth.py  tests\test_architecture_review.py  tests\test_bot_render.py  tests\test_calculations.py  tests\test_connector_safety.py  tests\test_database_hub.py  tests\test_embeddings.py  tests\test_orchestrator.py  tests\test_pagination.py  (+7 more)
alembic/: env.py
docs/: ARCHITECTURE.md  MODULE_SPECS.md  PLUGIN_SDK.md  SELF_AUDIT.md  SELF_UPDATE.md  SOURCES.md  WORKING_LOGIC_NOTEBOOK.md
infra/: RUNBOOK.md
operator_day/: calculations.py  claim_deadlines.py  config.py  db.py  domain.py  embeddings.py  main.py  memory.py  models.py  policies.py  release_gate.py  repositories.py  security.py  skills_catalog.py
tests/: conftest.py  test_api.py  test_api_auth.py  test_architecture_review.py  test_bot_accounts.py  test_pvz.py  (+26 more)
(+50 files in other folders)
