[project]
name = "operator-day"
version = "0.1.0"
description = "Telegram backend bot for marketplace sellers and PVZ owners."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.28.2,<4",
  "aiosqlite>=0.22.1,<1",
  "alembic>=1.18.4,<2",
  "asyncpg>=0.31.0,<1",
  "celery>=5.6.3,<6",
  "cryptography>=46.0.0,<47",
  "fastapi>=0.136.3,<1",
  "httpx>=0.28.1,<1",
  "pydantic>=2.13.4,<3",
  "pydantic-settings>=2.12.0,<3",
  "redis>=8.0.0,<9",
  "sqlalchemy>=2.0.50,<3",
  "uvicorn[standard]>=0.38.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0,<10",
  "pytest-asyncio>=1.3.0,<2",
  "ruff>=0.14.0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
